# milliForth

./: .gitmodules  CMakeLists.txt  README.md
src/: hal.s  rp6502.cfg  rp6502.s  sector-6502.s
tools/: rp6502.cfg  rp6502.cmake
